--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,18 @@ python = "^3.10"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
+pytest = "^7.2.0"
+pytest-clarity = "^1.0.1"
+pytest-emoji = "^0.2.0"
+
+[tool.pytest.ini_options]
+addopts = "-rssxX -l --tb=short --strict --emoji -vvv -p no:warnings"
+xfail_strict = "True"
+markers = [
+  "smoke",
+  "fire",
+  "verify"
+]
 
 [build-system]
 requires = ["poetry-core"]
