--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,6 +23,6 @@ jobs:
     - name: install poetry
       run: pipx install poetry
     - name: Install dependencies
-      run: poetry install --with dev
+      run: poetry install
     - name: Run pytest
       run: pytest
