--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Install dependencies
       run: poetry install
     - name: Run pytest
-      run: pytest
+      run: poetry run pytest
