--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,14 +14,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Install poetry
+      run: pipx install poetry
     - name: Set up Python 3.10
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v4
       with:
         python-version: "3.10"
-    - name: Install pipx
-      run: python3 -m pip install --user pipx
-    - name: install poetry
-      run: pipx install poetry
+        cache: 'poetry'
     - name: Install dependencies
       run: poetry install
     - name: Run pytest
